Fix documentación y test de tag producto.
